[gd_scene load_steps=5 format=3 uid="uid://3q07t5q38dgu"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_mcfrh"]
[ext_resource type="PackedScene" uid="uid://bsfghn0astcep" path="res://Scenes/ui_item_element.tscn" id="2_h2wat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8am14"]
bg_color = Color(0.775063, 0.775063, 0.775063, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tvgdi"]
font_size = 36

[node name="Game" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mcfrh")

[node name="MainMenuPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuPanel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 32.0
offset_right = 162.0
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="NewGameButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../LoadGameButton")
focus_next = NodePath("../LoadGameButton")
focus_previous = NodePath("../QuitGameButton")
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../QuitGameButton")
focus_next = NodePath("../QuitGameButton")
focus_previous = NodePath("../NewGameButton")
text = "Load Game"

[node name="LicenseButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Third-party Licenses"

[node name="QuitGameButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../LoadGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../LoadGameButton")
text = "Quit to Desktop"

[node name="ScrollContainer" type="ScrollContainer" parent="MainMenuPanel"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="PauseMenuPanel" type="Panel" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 0.392157)
custom_minimum_size = Vector2(225, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuPanel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_right = 99.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Restart from Checkpoint"

[node name="SettingsButton" type="Button" parent="PauseMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitToMenuButton" type="Button" parent="PauseMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Exit to Menu"

[node name="ExitToDesktopButton" type="Button" parent="PauseMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Exit to Desktop"

[node name="InventoryPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 5)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_8am14")

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryPanel"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -113.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 25
alignment = 1

[node name="Item1" parent="InventoryPanel/HBoxContainer" instance=ExtResource("2_h2wat")]
layout_mode = 2

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 150.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_tvgdi")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="ExitToMenuButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Exit to Menu"

[node name="ExitToDesktopButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Exit to Desktop"

[node name="ScorePanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(120, 50)
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainMenuPanel/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/LicenseButton" to="." method="_on_license_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="PauseMenuPanel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenuPanel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenuPanel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenuPanel/VBoxContainer/ExitToMenuButton" to="." method="_on_exit_to_menu_button_pressed"]
[connection signal="pressed" from="PauseMenuPanel/VBoxContainer/ExitToDesktopButton" to="." method="_on_exit_to_desktop_button_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/ExitToMenuButton" to="." method="_on_exit_to_menu_button_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/ExitToDesktopButton" to="." method="_on_exit_to_desktop_button_pressed"]
